--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 		<script type="module" src="./index.js"></script>
 		<script type="module" src="./select.js"></script>
 		<script type="module" src="./input.js"></script>
+		<script type="module" src="./form.js"></script>
 	</head>
 	<body>
 		<!-- ❗️❗️❗️ Add partials like so for every page -->
@@ -59,5 +60,6 @@
 				<button class="button_alarm" type="submit">Alarm</button>
 			</div>
 		</div>
+		<div class="test_form"></div>
 	</body>
 </html>
