--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 		<script type="module" src="./select.js"></script>
 		<script type="module" src="./input.js"></script>
 		<script type="module" src="./form.js"></script>
+		<script type="module" src="./tui_pagination.js"></script>
 	</head>
 	<body>
 		<!-- ❗️❗️❗️ Add partials like so for every page -->
@@ -61,5 +62,7 @@
 			</div>
 		</div>
 		<div class="test_form"></div>
+		<!-- Pagination -->
+		<div id="tui-pagination-container" class="tui-pagination"></div>
 	</body>
 </html>
