--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
 		</div>
 		<div class="test_form"></div>
 		<!-- Pagination -->
+		<ul class="tui-container"></ul>
 		<div id="tui-pagination-container" class="tui-pagination"></div>
 	</body>
 </html>
