--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,11 @@
 		</div>
 		<div class="test_form"></div>
 		<!-- Pagination -->
+		<div class="btn_container">
+			<button type="button" class="btn_item_add">Add item</button>
+			<button type="button" class="btn_item_del">Delete item</button>
+			<div class="item_pag">0</div>
+		</div>
 		<ul class="tui-container"></ul>
 		<div id="tui-pagination-container" class="tui-pagination"></div>
 	</body>
